android apt的基本框架搭建完成，包含debug部分

--- a/aptter-api/build.gradle
+++ b/aptter-api/build.gradle
@@ -1,11 +1,10 @@
 plugins {
     id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace 'com.zhouz.aptter'
+    namespace 'com.zhouz.aptter.api'
     compileSdk 33
 
     defaultConfig {
@@ -31,7 +30,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
