--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ android.nonTransitiveRClass=true
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 #android.suppressUnsupportedCompileSdk=33
-#org.gradle.java.home=C\:\\Users\\User\\.jdks\\temurin-11.0.22
+org.gradle.java.home=C\:\\Users\\User\\.jdks\\temurin-11.0.22
